--- a/projeto-sabespe/src/app/pages/inicio/inicio.component.html
+++ b/projeto-sabespe/src/app/pages/inicio/inicio.component.html
@@ -1,10 +1,10 @@
 <div class="tela-de-descanso-x">
     <div class="div">
         <div class="overlap">
-            <img class="ativo" src="img/ativo-2.png" /> <img class="mask-group" src="img/mask-group.png" />
+            <img class="ativo" src="img/ativo-2.png" /> <img class="mask-group" src="../../../assets/mask-group.gif" />
         </div>
         <div class="overlap-group">
-            <img class="img" src="img/ativo-3.png" />
+            <img class="img" src="../../../assets/ativo-3.png" />
             <div class="superintend-ncia">SUPERINTENDÊNCIA CENTRO</div>
         </div>
         <img class="group" src="img/group-42.png" />
