finalizando as telas de voce sabia

--- a/projeto-sabespe/src/app/pages/inicio/inicio.component.css
+++ b/projeto-sabespe/src/app/pages/inicio/inicio.component.css
@@ -75,6 +75,7 @@
     position: absolute;
     height: 93px;
     top: 948px;
+    cursor: pointer;
   }
   
   .tela-de-descanso-x .vector-wrapper {
@@ -85,6 +86,7 @@
     position: absolute;
     height: 93px;
     top: 948px;
+    cursor: pointer;
   }
   
   .tela-de-descanso-x .vector {
