--- a/projeto-sabespe/src/app/pages/menu/menu.component.html
+++ b/projeto-sabespe/src/app/pages/menu/menu.component.html
@@ -6,7 +6,7 @@
           <img class="vector" src="../../../assets/linhas-superior.png" />
           <img class="img" src="../../../assets/linha-inferior.png" />
           <img class="vector-2" src="../../../assets/linha-meio.png" />
-          <div class="frame"><div class="text-wrapper">Perfil Oc</div></div>
+          <div class="frame"  [routerLink]="['/super-centro']"><div class="text-wrapper">Perfil Oc</div></div>
           <div class="div-wrapper"><div class="text-wrapper">Indicadores e processos</div></div>
           <div class="frame-2"><div class="text-wrapper">Metas Contratuais</div></div>
         </div>
