--- a/projeto-sabespe/src/app/pages/voce-sabia/voce-sabia.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia/voce-sabia.component.html
@@ -8,17 +8,18 @@
               <div class="sabia">SABIA?</div>
             </div>
           </div>
-          <p class="a-atual-identidade">
-            A atual identidade paulista pode ser compreendida pela preservação da história e memórias das pessoas que
-            chegaram ao Brasil por meio da Hospedaria de Imigrantes do Brás no passado.&nbsp;&nbsp;<br /><br />O Museu
-            da Imigração do Estado de São Paulo preserva a história das pessoas que chegaram
-          </p>
+          <div class="paragrafo-com-scroll">
+            <p class="a-atual-identidade">
+              A OC foi berço do saneamento em São Paulo se iniciando com a criação em 1877 da “Companhia Cantareira de Água e Esgoto”, 
+              que mais tarde integraria a Sabesp, 
+              e a construção do reservatório da Consolação em 1878.
+            </p>
+          </div>
           <img class="ativo" src="../../../assets/grafismo.png" />
         </div>
         <div class="overlap-2">
           <img class="mask-group" src="../../../assets/sabia-oc.png" /> <img class="img" src="../../../assets/sabia-oc-2.png" />
         </div>
-        <div class="rectangle-wrapper"><div class="rectangle"></div></div>
       </div>
       <div class="vector-wrapper"><img class="vector" src="img/image.svg" /></div>
       <img class="group-2" src="img/group-45.png" />
