--- a/projeto-sabespe/src/app/pages/menu/menu.component.css
+++ b/projeto-sabespe/src/app/pages/menu/menu.component.css
@@ -68,6 +68,7 @@
     position: absolute;
     background-color: rgba(18, 208, 255, 1);
     border-radius: 30px;
+    cursor: pointer;
   }
   
   .home .text-wrapper {
