--- a/projeto-sabespe/src/app/pages/super-centro/super-centro.component.css
+++ b/projeto-sabespe/src/app/pages/super-centro/super-centro.component.css
@@ -179,6 +179,7 @@
     left: 1635px;
     background-size: cover;
     background-position: 50% 50%;
+    cursor: pointer;
   }
   
   .tela .vector {
@@ -203,6 +204,7 @@
     height: 125px;
     top: 48px;
     left: 1761px;
+    cursor: pointer;
   }
   
   .tela .frame {
@@ -219,6 +221,7 @@
     height: 93px;
     top: 928px;
     left: 78px;
+    cursor: pointer;
   }
   
   .tela .vector-wrapper {
