--- a/projeto-sabespe/src/app/pages/super-centro/super-centro.component.html
+++ b/projeto-sabespe/src/app/pages/super-centro/super-centro.component.html
@@ -23,12 +23,12 @@
         <div class="overlap-3"><div class="text-wrapper-3">97,80%</div></div>
         <div class="overlap-4"><div class="text-wrapper-4">88,50%</div></div>
       </div>
-      <div class="group"><img class="vector" src="img/vector.svg" /></div>
-      <img class="img" src="img/group-45.png" />
-      <img class="group-2" src="../../../assets/vc-sabia.png" />
+      <div class="group" [routerLink]="['/inicio']"><img class="vector" src="img/vector.svg" /></div>
+      <img class="img" src="img/group-45.png" [routerLink]="['/inicio']" />
+      <img class="group-2" src="../../../assets/vc-sabia.png" [routerLink]="['/voce-sabia']" />
       <img class="frame" src="img/frame-9.png" />
-      <img class="group-3" src="img/group-42.png" />
-      <div class="vector-wrapper"><img class="vector-2" src="img/image.svg" /></div>
+      <img class="group-3" src="img/group-42.png" [routerLink]="['/menu']" />
+      <div class="vector-wrapper"  [routerLink]="['/menu']"><img class="vector-2" src="img/image.svg" /></div>
     </div>
 </div>
 
