--- a/projeto-sabespe/src/app/pages/inicio/inicio.component.html
+++ b/projeto-sabespe/src/app/pages/inicio/inicio.component.html
@@ -1,15 +1,15 @@
 <div class="tela-de-descanso-x">
     <div class="div">
         <div class="overlap">
-            <img class="ativo" src="img/ativo-2.png" /> <img class="mask-group" src="../../../assets/mask-group.gif" />
+            <img class="ativo" src="../../../assets/gif/Element_05.gif" /> <img class="mask-group" src="../../../assets/mask-group.gif" />
         </div>
         <div class="overlap-group">
             <img class="img" src="../../../assets/ativo-3.png" />
             <div class="superintend-ncia">SUPERINTENDÊNCIA CENTRO</div>
         </div>
-        <img class="group" src="img/group-42.png" [routerLink]="['/menu']" />
+        <img class="group" src="../../../assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
         <div class="vector-wrapper" [routerLink]="['/super-centro']">
-            <img class="vector" src="img/vector.svg" />
+            <img class="vector" src="../../../assets/gif/ICONES_seta-dir.gif" />
         </div>
     </div>
 </div>
