adicionando os dados do arquivo excel

--- a/projeto-sabespe/src/app/pages/inicio/inicio.component.html
+++ b/projeto-sabespe/src/app/pages/inicio/inicio.component.html
@@ -1,16 +1,11 @@
-<div class="tela-de-descanso-x">
-    <div class="div">
-        <div class="overlap">
-            <img class="ativo" src="../../../assets/gif/Element_05.gif" /> <img class="mask-group" src="../../../assets/mask-group.gif" />
-        </div>
-        <div class="overlap-group">
-            <img class="img" src="../../../assets/ativo-3.png" />
-            <div class="superintend-ncia">SUPERINTENDÊNCIA CENTRO</div>
-        </div>
-        <img class="group" src="../../../assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
-        <div class="vector-wrapper" [routerLink]="['/super-centro']">
-            <img class="vector" src="../../../assets/gif/ICONES_seta-dir.gif" />
-        </div>
-    </div>
+<div class="div">
+    <img class="ativo" src="assets/gif/Element_05.gif" /> 
+    <img class="mask-group" src="assets/mask-group.gif" />
+    <img class="img" src="assets/ativo-3.png" />
+    <div class="superintendencia">SUPERINTENDÊNCIA CENTRO</div>
+    <img class="group" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
+    <img class="vector" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/super-centro']" />
 </div>
+    
+
 
