--- a/projeto-sabespe/src/app/pages/perfil-centro/perfil-centro.component.html
+++ b/projeto-sabespe/src/app/pages/perfil-centro/perfil-centro.component.html
@@ -1,56 +1,42 @@
-<div class="home">
-    <div class="div">
-      <div class="overlap">
-        <div class="overlap-group">
-          <div class="perfil-superintend">PERFIL SUPERINTENDÊNCIA</div>
-          <div class="centro-oc">CENTRO - OC</div>
-        </div>
-        <div class="overlap-2">
-          <div class="overlap-3">
-            <div class="group">
-              <img class="line" src="../../../assets/linha-perfil-1.png" />
-              <img class="img" src="../../../assets/linha-perfil-5.png" />
-              <img class="line-2" src="../../../assets/linha-perfil-10.png" />
-              <img class="line-3" src="../../../assets/linha-perfil-6.png" />
-              <img class="line-4" src="../../../assets/linha-perfil-7.png" />
-              <div class="overlap-group-2">
-                <img class="line-5" src="../../../assets/linha-perfil-9.png" /> <img class="line-6" src="../../../assets/linha-perfil-8.png" />
-              </div>
-              <img class="line-7" src="../../../assets/linha-perfil-3.png" />
-            </div>
-            <img class="ativo" src="../../../assets/bolinha-azul.png" />
-            <img class="ativo-2" src="../../../assets/bolinha-azul.png" />
-            <img class="ativo-3" src="../../../assets/bolinha-azul.png" />
-            <img class="ativo-4" src="../../../assets/bolinha-azul.png" />
-            <img class="ativo-5" src="../../../assets/bolinha-azul.png" />
-            <img class="ativo-6" src="../../../assets/bolinha-azul.png" />
-            <img class="ativo-7" src="../../../assets/bolinha-azul.png" />
-            <img class="ativo-8" src="../../../assets/bolinha-azul.png" />
-            <div class="text-wrapper">934 mil</div>
-            <div class="text-wrapper-2">2,04 bi</div>
-            <div class="text-wrapper-3">153 mil</div>
-            <div class="text-wrapper-4">1,25 mi</div>
-            <div class="text-wrapper-5">1.252 mil</div>
-            <div class="text-wrapper-6">1,26 mi</div>
-            <div class="text-wrapper-7">126 mi</div>
-            <div class="text-wrapper-8">152 mil</div>
-            <div class="text-wrapper-9">152 mil</div>
-            <div class="text-wrapper-10">Economias de Água</div>
-            <div class="text-wrapper-11">Faturamento Médio Anual (líquido)</div>
-            <div class="text-wrapper-12">Total de Ligações</div>
-            <div class="text-wrapper-13">População Atendida</div>
-            <div class="ellipse-wrapper"><div class="ellipse"></div></div>
-          </div>
-          <div class="text-wrapper-14">Economias de Esgoto</div>
-          <div class="text-wrapper-15">Ligações de Água</div>
-          <div class="text-wrapper-16">Total de Economias</div>
-          <img class="group-2" src="../../../assets/vc-sabia.png" />
-        </div>
-        <div class="text-wrapper-17">Ligações de Esgoto</div>
-        <div class="vector-wrapper"><img class="vector" src="img/image.svg" /></div>
-        <img class="group-3" src="img/group-60.png" />
-        <div class="img-wrapper"><img class="vector-2" src="img/vector.svg" /></div>
-      </div>
-      <img class="group-4" src="img/group-42.png" />
-    </div>
+<div class="div">
+  <div class="perfil-superintend">PERFIL SUPERINTENDÊNCIA</div>
+  <div class="centro-oc">CENTRO - OC</div>
+  <img class="line" src="assets/linha-perfil-1.png" />
+  <img class="img" src="assets/linha-perfil-5.png" />
+  <img class="line-2" src="assets/linha-perfil-10.png" />
+  <img class="line-3" src="assets/linha-perfil-6.png" />
+  <img class="line-4" src="assets/linha-perfil-7.png" />
+  <img class="line-5" src="assets/linha-perfil-9.png" /> 
+  <img class="line-6" src="assets/linha-perfil-8.png" />
+  <img class="line-7" src="assets/linha-perfil-3.png" />
+  <img class="ativo" src="assets/bolinha-azul.png" />
+  <img class="ativo-2" src="assets/bolinha-azul.png" />
+  <img class="ativo-3" src="assets/bolinha-azul.png" />
+  <img class="ativo-4" src="assets/bolinha-azul.png" />
+  <img class="ativo-5" src="assets/bolinha-azul.png" />
+  <img class="ativo-6" src="assets/bolinha-azul.png" />
+  <img class="ativo-7" src="assets/bolinha-azul.png" />
+  <img class="ativo-8" src="assets/bolinha-azul.png" />
+  <div class="text-wrapper"></div>
+  <div class="text-wrapper-2">{{ excelData[2]["Perfil Superintendência centro"] }}</div>
+  <div class="text-wrapper-3">{{ excelData[3]["Perfil Superintendência centro"] }}</div>
+  <div class="text-wrapper-4">{{ excelData[8]["Perfil Superintendência centro"] }}</div>
+  <div class="text-wrapper-5">{{ excelData[7]["Perfil Superintendência centro"] }}</div>
+  <div class="text-wrapper-6">{{ excelData[6]["Perfil Superintendência centro"] }}</div>
+  <div class="text-wrapper-8">{{ excelData[5]["Perfil Superintendência centro"] }}</div>
+  <div class="text-wrapper-9">{{ excelData[4]["Perfil Superintendência centro"] }}</div>
+  <div class="text-wrapper-10">Economias de Água</div>
+  <div class="text-wrapper-11">Faturamento Médio Anual (líquido)</div>
+  <div class="text-wrapper-12">Total de Ligações</div>
+  <div class="text-wrapper-13">População Atendida</div>
+  <img class="ellipse-wrapper" src="assets/gif/Element_05.gif" />
+  <div class="text-wrapper-14">Economias de Esgoto</div>
+  <div class="text-wrapper-15">Ligações de Água</div>
+  <div class="text-wrapper-16">Total de Economias</div>
+  <img class="group-2" src="assets/vc-sabia.png" />
+  <div class="text-wrapper-17">Ligações de Esgoto</div>
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="group-3" src="assets/gif/ICONES_X.gif" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
+  <img class="group-4" src="assets/gif/ICONES_casa.gif" />
 </div>
