--- a/projeto-sabespe/src/app/pages/voce-sabia-25-marco/voce-sabia-25-marco.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-25-marco/voce-sabia-25-marco.component.html
@@ -1,16 +1,11 @@
-<div class="voc-sabia-polo-mooca">
-    <div class="div">
-      <div class="overlap">
-        <div class="overlap-group">
-          <div class="group">
-            <div class="overlap-group-2">
-              <div class="voc">VOCÊ</div>
-              <div class="sabia">SABIA?</div>
-            </div>
-          </div>
-          <div class="paragrafo-com-scroll">
-            <p class="a-atual-identidade">
-                A Rua 25 de Março é o maior centro comercial popular a céu aberto da cidade. 
+<div class="div">
+  <div class="overlap">
+    <div class="overlap-group">
+      <div class="voc">VOCÊ</div>
+      <div class="sabia">SABIA?</div>
+      <div class="paragrafo-com-scroll">
+        <p class="a-atual-identidade">
+          A Rua 25 de Março é o maior centro comercial popular a céu aberto da cidade. 
                 Ela é palco de oportunidades para pequenos e grandes comerciantes, e em sua imensa  variedade de produtos, 
                 preços e oportunidades, reflete a diversidade cultural de São Paulo.&nbsp;&nbsp;<br /><br />
                 Vamos dar um pulo na 25?”. 
@@ -24,18 +19,18 @@
                 Desde sua fundação em 1865, testemunhou a evolução da cidade e se tornou um símbolo da força do comércio local.
                 O nome da rua é uma homenagem à primeira constituição brasileira assinada no dia 25 de março de 1824.
                 Uma experiência cultural única.
-            </p>
-          </div>
-          <img class="ativo" src="../../../assets/grafismo.png" />
-        </div>
-        <div class="overlap-2">
-          <img class="mask-group" src="../../../assets/ipiranga/25-marco/25-marco-1.png" /> <img class="img" src="../../../assets/ipiranga/25-marco/25-marco-2.png" />
-        </div>
+        </p>
       </div>
-      <div class="vector-wrapper"><img class="vector" src="img/image.svg" /></div>
-      <img class="group-2" src="img/group-45.png" />
-      <img class="frame" src="img/frame-9.png" />
-      <img class="group-3" src="img/group-42.png" />
-      <div class="img-wrapper"><img class="vector-2" src="img/vector.svg" /></div>
+      <img class="ativo" src="assets/grafismo.png" />
     </div>
+    <div class="overlap-2">
+      <img class="mask-group" src="assets/ipiranga/25-marco/25-marco-1.png" /> <img class="img" src="assets/ipiranga/25-marco/25-marco-2.png" />
+    </div>
+  </div>
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="frame" src="assets/linha-colorida.png" />
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
+  <div class="img-wrapper"></div>
 </div>
