--- a/projeto-sabespe/src/app/pages/voce-sabia-catedral/voce-sabia-catedral.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-catedral/voce-sabia-catedral.component.html
@@ -1,16 +1,11 @@
-<div class="voc-sabia-polo-mooca">
-    <div class="div">
-      <div class="overlap">
-        <div class="overlap-group">
-          <div class="group">
-            <div class="overlap-group-2">
-              <div class="voc">VOCÊ</div>
-              <div class="sabia">SABIA?</div>
-            </div>
-          </div>
-          <div class="paragrafo-com-scroll">
-            <p class="a-atual-identidade">
-                Mais do que um cartão postal da cidade de São Paulo, a Catedral da Sé, localizada em frente ao marco zero da cidade, 
+<div class="div">
+  <div class="overlap">
+    <div class="overlap-group">
+      <div class="voc">VOCÊ</div>
+      <div class="sabia">SABIA?</div>
+      <div class="paragrafo-com-scroll">
+        <p class="a-atual-identidade">
+          Mais do que um cartão postal da cidade de São Paulo, a Catedral da Sé, localizada em frente ao marco zero da cidade, 
                 é uma cápsula no tempo que preserva arquitetura neogótica e obras de arte sacra; e um abrigo de fé e acolhimento 
                 para todos os povos.&nbsp;&nbsp;<br /><br />
                 Uma sentinela imponente que observa a cidade em constante transformação. Sua arquitetura neogótica, com torres majestosas
@@ -21,18 +16,19 @@
                 É um espaço de inclusão e acolhimento, onde todos são bem-vindos para celebrar a fé e encontrar comunidade.&nbsp;&nbsp;<br /><br />
                 É um dos principais símbolos da cidade de São Paulo; um ponto de referência para turistas e paulistanos; um local de visita 
                 obrigatória para quem deseja conhecer a alma da cidade.
-            </p>
-          </div>
-          <img class="ativo" src="../../../assets/grafismo.png" />
-        </div>
-        <div class="overlap-2">
-          <img class="mask-group" src="../../../assets/ipiranga/catedral/catedral-1.png" /> <img class="img" src="../../../assets/ipiranga/catedral/catedral-2.png" />
-        </div>
+        </p>
       </div>
-      <div class="vector-wrapper"><img class="vector" src="img/image.svg" /></div>
-      <img class="group-2" src="img/group-45.png" />
-      <img class="frame" src="img/frame-9.png" />
-      <img class="group-3" src="img/group-42.png" />
-      <div class="img-wrapper"><img class="vector-2" src="img/vector.svg" /></div>
+      <img class="ativo" src="assets/grafismo.png" />
     </div>
+    <div class="overlap-2">
+      <img class="mask-group" src="assets/ipiranga/catedral/catedral-1.png" /> <img class="img" src="assets/ipiranga/catedral/catedral-2.png" />
+    </div>
+  </div>
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="frame" src="assets/linha-colorida.png" />
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
+  <div class="img-wrapper"></div>
 </div>
+
