--- a/projeto-sabespe/src/app/pages/voce-sabia-ibirapuera/voce-sabia-ibirapuera.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-ibirapuera/voce-sabia-ibirapuera.component.html
@@ -1,16 +1,11 @@
-<div class="voc-sabia-polo-mooca">
-    <div class="div">
-      <div class="overlap">
-        <div class="overlap-group">
-          <div class="group">
-            <div class="overlap-group-2">
-              <div class="voc">VOCÊ</div>
-              <div class="sabia">SABIA?</div>
-            </div>
-          </div>
-          <div class="paragrafo-com-scroll">
-            <p class="a-atual-identidade">
-                Um reduto para o contato com a natureza, lazer e prática esportiva, localizado no coração da selva de pedras. 
+<div class="div">
+  <div class="overlap">
+    <div class="overlap-group">
+      <div class="voc">VOCÊ</div>
+      <div class="sabia">SABIA?</div>
+      <div class="paragrafo-com-scroll">
+        <p class="a-atual-identidade">
+          Um reduto para o contato com a natureza, lazer e prática esportiva, localizado no coração da selva de pedras. 
                 O Parque do Ibirapuera, que abriga obras e museus, 
                 continua escrevendo novas histórias por meio das manifestações artísticas e culturais constantes.&nbsp;&nbsp;<br /><br />
                 Em meio à selva de pedra da capital paulista, surge o Parque do Ibirapuera, um oásis verde que acalma a alma e revigora os sentidos. 
@@ -20,18 +15,19 @@
                 O Museu de Arte Moderna (MAM) e o Museu Afro Brasil são exemplos da rica oferta cultural do parque.&nbsp;&nbsp;<br /><br />
                 Mais do que um parque, o Ibirapuera é um símbolo da cidade de São Paulo. 
                 Um legado para as gerações futuras, um espaço que deve ser preservado e valorizado.
-            </p>
-          </div>
-          <img class="ativo" src="../../../assets/grafismo.png" />
-        </div>
-        <div class="overlap-2">
-          <img class="mask-group" src="../../../assets/jardins/ibirapuera/ibirapuera-2.png" /> <img class="img" src="../../../assets/jardins/ibirapuera/ibirapuera-1.png" />
-        </div>
+        </p>
       </div>
-      <div class="vector-wrapper"><img class="vector" src="img/image.svg" /></div>
-      <img class="group-2" src="img/group-45.png" />
-      <img class="frame" src="img/frame-9.png" />
-      <img class="group-3" src="img/group-42.png" />
-      <div class="img-wrapper"><img class="vector-2" src="img/vector.svg" /></div>
+      <img class="ativo" src="assets/grafismo.png" />
     </div>
+    <div class="overlap-2">
+      <img class="mask-group" src="assets/jardins/ibirapuera/ibirapuera-2.png" /> <img class="img" src="assets/jardins/ibirapuera/ibirapuera-1.png" />
+    </div>
+  </div>
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="frame" src="assets/linha-colorida.png" />
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
+  <div class="img-wrapper"></div>
 </div>
+
