--- a/projeto-sabespe/src/app/pages/inicio/inicio.component.css
+++ b/projeto-sabespe/src/app/pages/inicio/inicio.component.css
@@ -1,52 +1,28 @@
-.tela-de-descanso-x {
-    background-color: #f9f9f9;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  .tela-de-descanso-x .div {
+  .div {
     background-color: #f9f9f9;
     width: 1920px;
     height: 1080px;
     position: relative;
   }
   
-  .tela-de-descanso-x .overlap {
-    width: 586px;
-    top: 226px;
-    left: 1180px;
-    position: absolute;
-    height: 691px;
-  }
-  
-  .tela-de-descanso-x .ativo {
+  .ativo {
     width: 550px;
     height: 450px;
-    top: 285px;
-    left: 150px;
+    top: 485px;
+    left: 1300px;
     position: absolute;
     object-fit: cover;
   }
   
-  .tela-de-descanso-x .mask-group {
+  .mask-group {
     position: absolute;
-    width: 569px;
-    height: 612px;
-    top: 0;
-    left: 0;
+    width: 469px;
+    height: 712px;
+    top: 100px;
+    left: 1250px;
   }
   
-  .tela-de-descanso-x .overlap-group {
-    width: 1078px;
-    top: 0;
-    left: 0;
-    position: absolute;
-    height: 691px;
-  }
-  
-  .tela-de-descanso-x .img {
+  .img {
     width: 960px;
     height: 572px;
     top: 0;
@@ -55,7 +31,7 @@
     object-fit: cover;
   }
   
-  .tela-de-descanso-x .superintend-ncia {
+  .superintendencia {
     position: absolute;
     width: 938px;
     top: 451px;
@@ -69,30 +45,19 @@
     line-height: normal;
   }
   
-  .tela-de-descanso-x .group {
-    width: 300px;
+  .group {
+    width: 150px;
     position: absolute;
-    height: 300px;
-    top: 840px;
+    height: 150px;
+    top: 920px;
     cursor: pointer;
   }
   
-  .tela-de-descanso-x .vector-wrapper {
-    width: 120px;
-    left: 1766px;
-    background-size: cover;
-    background-position: 50% 50%;
+  .vector {
     position: absolute;
-    height: 120px;
-    top: 948px;
-    cursor: pointer;
-  }
-  
-  .tela-de-descanso-x .vector {
-    position: absolute;
-    width: 300px;
-    height: 300px;
-    top: -100px;
-    left: -80px;
+    width: 150px;
+    height: 150px;
+    top: 920px;
+    left: 1750px;
   }
   
