--- a/projeto-sabespe/src/app/pages/mapa/mapa.component.css
+++ b/projeto-sabespe/src/app/pages/mapa/mapa.component.css
@@ -1,19 +1,12 @@
-.tela {
-    background-color: #f9f9f9;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  .tela .div {
+ 
+  .div {
     background-color: #f9f9f9;
     width: 1920px;
     height: 1080px;
     position: relative;
   }
   
-  .tela .overlap-group {
+  .overlap-group {
     position: absolute;
     width: 1423px;
     height: 723px;
@@ -21,7 +14,7 @@
     left: 212px;
   }
   
-  .tela .line {
+  .line {
     width: 202px;
     height: 157px;
     top: 104px;
@@ -30,7 +23,7 @@
     object-fit: cover;
   }
   
-  .tela .img {
+  .img {
     width: 190px;
     height: 188px;
     top: 288px;
@@ -39,7 +32,7 @@
     object-fit: cover;
   }
   
-  .tela .line-2 {
+  .line-2 {
     width: 126px;
     height: 196px;
     top: 105px;
@@ -48,7 +41,7 @@
     object-fit: cover;
   }
   
-  .tela .line-3 {
+  .line-3 {
     width: 46px;
     height: 198px;
     top: 59px;
@@ -57,7 +50,7 @@
     object-fit: cover;
   }
   
-  .tela .line-4 {
+  .line-4 {
     width: 34px;
     height: 265px;
     top: 382px;
@@ -66,7 +59,7 @@
     object-fit: cover;
   }
   
-  .tela .mask-group {
+  .mask-group {
     position: absolute;
     width: 1153px;
     height: 649px;
@@ -74,7 +67,7 @@
     left: 80px;
   }
   
-  .tela .frame {
+  .frame {
     display: flex;
     width: 201px;
     height: 59px;
@@ -89,7 +82,7 @@
     border-radius: 30px;
   }
   
-  .tela .text-wrapper {
+  .text-wrapper {
     margin-left: -4.5px;
     margin-right: -4.5px;
     position: relative;
@@ -102,7 +95,7 @@
     line-height: normal;
   }
   
-  .tela .polo-tamanduate-wrapper {
+  .polo-tamanduate-wrapper {
     display: flex;
     width: 284px;
     height: 59px;
@@ -117,7 +110,7 @@
     border-radius: 30px;
   }
   
-  .tela .text-wrapper-2 {
+  .text-wrapper-2 {
     position: relative;
     width: fit-content;
     font-family: "Inter-Bold", Helvetica;
@@ -128,7 +121,7 @@
     line-height: normal;
   }
   
-  .tela .div-wrapper {
+  .div-wrapper {
     display: flex;
     width: 269px;
     height: 59px;
@@ -143,7 +136,7 @@
     border-radius: 30px;
   }
   
-  .tela .frame-2 {
+  .frame-2 {
     display: flex;
     width: 214px;
     height: 59px;
@@ -158,7 +151,7 @@
     border-radius: 30px;
   }
   
-  .tela .frame-3 {
+  .frame-3 {
     display: flex;
     width: 213px;
     height: 59px;
@@ -173,7 +166,7 @@
     border-radius: 30px;
   }
   
-  .tela .text-wrapper-3 {
+  .text-wrapper-3 {
     margin-left: -3px;
     margin-right: -3px;
     position: relative;
@@ -186,33 +179,23 @@
     line-height: normal;
   }
   
-  .tela .group {
-    width: 101px;
-    left: 1635px;
-    background-size: cover;
-    background-position: 50% 50%;
+  .vector {
     position: absolute;
-    height: 93px;
-    top: 928px;
+    width: 150px;
+    height: 150px;
+    top: 920px;
+    left: 1600px;
   }
   
-  .tela .vector {
+  .group-2 {
+    width: 150px;
+    height: 150px;
     position: absolute;
-    width: 40px;
-    height: 40px;
-    top: 21px;
-    left: 33px;
+    left: 116px;
+    top: 920px;
   }
   
-  .tela .group-2 {
-    width: 101px;
-    left: 186px;
-    position: absolute;
-    height: 93px;
-    top: 928px;
-  }
-  
-  .tela .frame-4 {
+  .frame-4 {
     position: absolute;
     width: 1920px;
     height: 18px;
@@ -220,29 +203,18 @@
     left: 0;
   }
   
-  .tela .group-3 {
-    width: 102px;
-    left: 78px;
+  .group-3 {
+    width: 150px;
+    height: 150px;
     position: absolute;
-    height: 93px;
-    top: 928px;
+    top: 920px;
   }
   
-  .tela .vector-wrapper {
-    width: 101px;
-    left: 1743px;
-    background-size: cover;
-    background-position: 50% 50%;
+  .vector-2 {
     position: absolute;
-    height: 93px;
-    top: 928px;
-  }
-  
-  .tela .vector-2 {
-    position: absolute;
-    width: 41px;
-    height: 41px;
-    top: 20px;
-    left: 27px;
+    width: 150px;
+    height: 150px;
+    top: 920px;
+    left: 1750px;
   }
   
