--- a/projeto-sabespe/src/app/pages/menu/menu.component.html
+++ b/projeto-sabespe/src/app/pages/menu/menu.component.html
@@ -1,21 +1,22 @@
-<div class="home">
-    <div class="div">
-      <div class="overlap-group">
-        <div class="overlap-group">
-          <img class="image" src="img/image-10.png" />
-          <img class="vector" src="../../../assets/linhas-superior.png" />
-          <img class="img" src="../../../assets/linha-inferior.png" />
-          <img class="vector-2" src="../../../assets/linha-meio.png" />
-          <div class="frame"  [routerLink]="['/super-centro']"><div class="text-wrapper">Perfil Oc</div></div>
-          <div class="div-wrapper"><div class="text-wrapper">Indicadores e processos</div></div>
-          <div class="frame-2"><div class="text-wrapper">Metas Contratuais</div></div>
-        </div>
-        <div class="frame-3"><div class="text-wrapper">Você sabia?</div></div>
-        <div class="frame-4"><div class="text-wrapper">Perfil Polos</div></div>
-      </div>
-      <div class="group"><img class="vector-3" src="img/vector.svg" /></div>
-      <img class="group-2" src="img/group-45.png" />
-      <div class="vector-wrapper"><img class="vector-4" src="img/image.svg" /></div>
-      <img class="group-3" src="img/group-42.png" />
+<div class="div">
+  <div class="overlap-group">
+    <div class="overlap-group">
+      <img class="image" src="img/image-10.png" />
+      <img class="vector" src="assets/linha-inferior.png" />
+      <img class="img" src="assets/linha-inferior-meio.png" />
+      <div class="frame"><div class="text-wrapper">Indicadores e processos</div></div>
+      <div class="div-wrapper"><div class="text-wrapper">Metas Contratuais</div></div>
     </div>
+    <img class="vector-2" src="assets/linha-superior-meio.png" />
+    <div class="overlap">
+      <img class="vector-3" src="assets/linha-superior.png" />
+      <div class="perfil-OC-wrapper"><div class="text-wrapper">Perfil Oc</div></div>
+    </div>
+    <div class="frame-2"><div class="text-wrapper">Perfil Polos</div></div>
+  </div>
+  <img class="vector-4" src="assets/gif/ICONES_seta-dir.gif" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="vector-5" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
 </div>
+
