--- a/projeto-sabespe/src/app/pages/perfil-centro/perfil-centro.component.css
+++ b/projeto-sabespe/src/app/pages/perfil-centro/perfil-centro.component.css
@@ -1,39 +1,15 @@
-.home {
-    background-color: #f9f9f9;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-  }
   
-  .home .div {
+  .div {
     background-color: #f9f9f9;
     width: 1920px;
     height: 1080px;
     position: relative;
   }
   
-  .home .overlap {
+  .perfil-superintend {
     position: absolute;
-    width: 1828px;
-    height: 973px;
     top: 48px;
     left: 52px;
-  }
-  
-  .home .overlap-group {
-    position: absolute;
-    width: 511px;
-    height: 72px;
-    top: 4px;
-    left: 0;
-  }
-  
-  .home .perfil-superintend {
-    position: absolute;
-    width: 511px;
-    top: 0;
-    left: 0;
     mix-blend-mode: multiply;
     font-family: "Satoshi-Black", Helvetica;
     font-weight: 900;
@@ -43,11 +19,10 @@
     line-height: normal;
   }
   
-  .home .centro-oc {
+  .centro-oc {
     position: absolute;
-    width: 250px;
-    top: 23px;
-    left: 0;
+    top: 75px;
+    left: 52px;
     mix-blend-mode: multiply;
     font-family: "Satoshi-Black", Helvetica;
     font-weight: 900;
@@ -57,186 +32,129 @@
     line-height: normal;
   }
   
-  .home .overlap-2 {
-    position: absolute;
-    width: 1658px;
-    height: 890px;
-    top: 0;
-    left: 170px;
-  }
-  
-  .home .overlap-3 {
-    position: absolute;
-    width: 1553px;
-    height: 744px;
-    top: 102px;
-    left: 0;
-  }
-  
-  .home .group {
+  .group {
     position: absolute;
     width: 1331px;
     height: 536px;
-    top: 137px;
-    left: 123px;
+    top: 541px;
+    left: 345px;
   }
   
-  .home .line {
+  .line {
     width: 461px;
-    height: 25px;
-    top: 244px;
-    left: 0;
+    top: 541px;
+    left: 345px;
     position: absolute;
-    object-fit: cover;
   }
   
-  .home .img {
+  .img {
     width: 204px;
-    height: 151px;
-    top: 21px;
-    left: 271px;
+    top: 318px;
+    left: 616px;
     position: absolute;
-    object-fit: cover;
   }
   
-  .home .line-2 {
+  .line-2 {
     width: 1px;
-    height: 162px;
-    top: 0;
-    left: 612px;
+    top: 297px;
+    left: 957px;
     position: absolute;
-    object-fit: cover;
   }
   
-  .home .line-3 {
+  .line-3 {
     width: 143px;
-    height: 75px;
-    top: 96px;
-    left: 748px;
+    top: 393px;
+    left: 1093px;
     position: absolute;
-    object-fit: cover;
   }
   
-  .home .line-4 {
+  .line-4 {
     width: 566px;
-    height: 90px;
-    top: 199px;
-    left: 765px;
+    top: 496px;
+    left: 1110px;
     position: absolute;
-    object-fit: cover;
   }
   
-  .home .overlap-group-2 {
-    position: absolute;
-    width: 577px;
-    height: 189px;
-    top: 347px;
-    left: 606px;
-  }
-  
-  .home .line-5 {
+  .line-5 {
     width: 433px;
-    height: 122px;
-    top: 0;
-    left: 144px;
+    top: 644px;
+    left: 1095px;
     position: absolute;
-    object-fit: cover;
   }
   
-  .home .line-6 {
+  .line-6 {
     width: 237px;
-    height: 189px;
-    top: 0;
-    left: 0;
+    top: 644px;
+    left: 951px;
     position: absolute;
-    object-fit: cover;
   }
   
-  .home .line-7 {
+  .line-7 {
     width: 225px;
-    height: 143px;
-    top: 345px;
-    left: 248px;
+    top: 642px;
+    left: 593px;
     position: absolute;
-    object-fit: cover;
   }
   
-  .home .ativo {
-    height: 145px;
-    top: 294px;
-    left: 0;
+  .ativo {
+    width: 152px;
+    top: 454px;
+    left: 222px;
+    position: absolute;
+  }
+  
+  .ativo-2 {
+    top: 759px;
+    left: 1120px;
     position: absolute;
     width: 152px;
-    object-fit: cover;
   }
   
-  .home .ativo-2 {
-    height: 145px;
-    top: 599px;
-    left: 898px;
+  .ativo-3 {
+    top: 242px;
+    left: 519px;
     position: absolute;
     width: 152px;
-    object-fit: cover;
   }
   
-  .home .ativo-3 {
-    height: 144px;
-    top: 82px;
-    left: 297px;
+  .ativo-4 {
+    top: 687px;
+    left: 1439px;
     position: absolute;
     width: 152px;
-    object-fit: cover;
   }
   
-  .home .ativo-4 {
-    height: 144px;
-    top: 527px;
-    left: 1217px;
-    position: absolute;
-    width: 152px;
-    object-fit: cover;
-  }
-  
-  .home .ativo-5 {
-    top: 572px;
-    left: 282px;
+  .ativo-5 {
+    top: 732px;
+    left: 504px;
     position: absolute;
     width: 150px;
-    height: 139px;
-    object-fit: cover;
   }
   
-  .home .ativo-6 {
+  .ativo-6 {
+    top: 433px;
+    left: 1591px;
+    position: absolute;
+    width: 150px;
+  }
+  
+  .ativo-7 {
+    top: 218px;
+    left: 874px;
+    position: absolute;
+    width: 150px;
+  }
+  
+  .ativo-8 {
+    position: absolute;
+    width: 151px;
+    top: 292px;
+    left: 1164px;
+  }
+  
+  .text-wrapper {
     top: 273px;
-    left: 1369px;
-    position: absolute;
-    width: 150px;
-    height: 139px;
-    object-fit: cover;
-  }
-  
-  .home .ativo-7 {
-    top: 58px;
-    left: 652px;
-    position: absolute;
-    width: 150px;
-    height: 139px;
-    object-fit: cover;
-  }
-  
-  .home .ativo-8 {
-    position: absolute;
-    width: 191px;
-    height: 187px;
-    top: 132px;
-    left: 942px;
-    object-fit: cover;
-  }
-  
-  .home .text-wrapper {
-    width: 99px;
-    top: 107px;
-    left: 671px;
+    left: 893px;
     font-size: 26px;
     text-align: center;
     position: absolute;
@@ -247,11 +165,10 @@
     line-height: normal;
   }
   
-  .home .text-wrapper-2 {
+  .text-wrapper-2 {
     position: absolute;
-    width: 96px;
-    top: 203px;
-    left: 985px;
+    top: 345px;
+    left: 1190px;
     font-family: "Satoshi-Black", Helvetica;
     font-weight: 900;
     color: #ffffff;
@@ -261,79 +178,9 @@
     line-height: normal;
   }
   
-  .home .text-wrapper-3 {
-    width: 92px;
-    top: 321px;
-    left: 1400px;
-    font-size: 26px;
-    text-align: center;
-    position: absolute;
-    font-family: "Satoshi-Black", Helvetica;
-    font-weight: 900;
-    color: #ffffff;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
-  .home .text-wrapper-4 {
-    position: absolute;
-    width: 94px;
-    top: 138px;
-    left: 322px;
-    font-family: "Satoshi-Black", Helvetica;
-    font-weight: 900;
-    color: #ffffff;
-    font-size: 26px;
-    text-align: center;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
-  .home .text-wrapper-5 {
-    position: absolute;
-    width: 117px;
-    top: 349px;
-    left: 14px;
-    font-family: "Satoshi-Black", Helvetica;
-    font-weight: 900;
-    color: #ffffff;
-    font-size: 26px;
-    text-align: center;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
-  .home .text-wrapper-6 {
-    position: absolute;
-    width: 94px;
-    top: 622px;
-    left: 307px;
-    font-family: "Satoshi-Black", Helvetica;
-    font-weight: 900;
-    color: #ffffff;
-    font-size: 26px;
-    text-align: center;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
-  .home .text-wrapper-7 {
-    width: 87px;
-    top: 661px;
-    left: 584px;
-    font-size: 18px;
-    position: absolute;
-    font-family: "Satoshi-Black", Helvetica;
-    font-weight: 900;
-    color: #ffffff;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
-  .home .text-wrapper-8 {
-    width: 92px;
-    top: 652px;
-    left: 925px;
+  .text-wrapper-3 {
+    top: 488px;
+    left: 1614px;
     font-size: 26px;
     text-align: center;
     position: absolute;
@@ -344,10 +191,48 @@
     line-height: normal;
   }
   
-  .home .text-wrapper-9 {
-    width: 93px;
-    top: 585px;
-    left: 1243px;
+  .text-wrapper-4 {
+    position: absolute;
+    top: 298px;
+    left: 544px;
+    font-family: "Satoshi-Black", Helvetica;
+    font-weight: 900;
+    color: #ffffff;
+    font-size: 26px;
+    text-align: center;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .text-wrapper-5 {
+    position: absolute;
+    top: 509px;
+    left: 236px;
+    font-family: "Satoshi-Black", Helvetica;
+    font-weight: 900;
+    color: #ffffff;
+    font-size: 26px;
+    text-align: center;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .text-wrapper-6 {
+    position: absolute;
+    top: 782px;
+    left: 529px;
+    font-family: "Satoshi-Black", Helvetica;
+    font-weight: 900;
+    color: #ffffff;
+    font-size: 26px;
+    text-align: center;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .text-wrapper-8 {
+    top: 812px;
+    left: 1147px;
     font-size: 26px;
     text-align: center;
     position: absolute;
@@ -358,13 +243,26 @@
     line-height: normal;
   }
   
-  .home .text-wrapper-10 {
-    width: 124px;
-    top: 228px;
-    left: 24px;
+  .text-wrapper-9 {
+    top: 745px;
+    left: 1465px;
+    font-size: 26px;
+    text-align: center;
+    position: absolute;
+    font-family: "Satoshi-Black", Helvetica;
+    font-weight: 900;
+    color: #ffffff;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .text-wrapper-10 {
+    top: 398px;
+    left: 246px;
+    width: 100px;
     position: absolute;
     font-family: "Satoshi-Medium", Helvetica;
-    font-weight: 500;
+    font-weight: 700;
     color: #000000;
     font-size: 18px;
     text-align: center;
@@ -372,13 +270,13 @@
     line-height: normal;
   }
   
-  .home .text-wrapper-11 {
+  .text-wrapper-11 {
     position: absolute;
-    width: 187px;
-    top: 90px;
-    left: 958px;
+    top: 230px;
+    left: 1160px;
+    width: 170px;
     font-family: "Satoshi-Medium", Helvetica;
-    font-weight: 500;
+    font-weight: 700;
     color: #000000;
     font-size: 18px;
     text-align: center;
@@ -386,13 +284,12 @@
     line-height: normal;
   }
   
-  .home .text-wrapper-12 {
-    width: 186px;
-    top: 239px;
-    left: 1367px;
+  .text-wrapper-12 {
+    top: 399px;
+    left: 1589px;
     position: absolute;
     font-family: "Satoshi-Medium", Helvetica;
-    font-weight: 500;
+    font-weight: 700;
     color: #000000;
     font-size: 18px;
     text-align: center;
@@ -400,13 +297,13 @@
     line-height: normal;
   }
   
-  .home .text-wrapper-13 {
+  .text-wrapper-13 {
     position: absolute;
-    width: 186px;
-    top: 0;
-    left: 648px;
+    top: 160px;
+    width: 160px;
+    left: 870px;
     font-family: "Satoshi-Medium", Helvetica;
-    font-weight: 500;
+    font-weight: 700;
     color: #000000;
     font-size: 18px;
     text-align: center;
@@ -414,33 +311,23 @@
     line-height: normal;
   }
   
-  .home .ellipse-wrapper {
+  .ellipse-wrapper {
     position: absolute;
     width: 397px;
     height: 396px;
-    top: 252px;
-    left: 523px;
-    
+    top: 412px;
+    left: 745px;
     background-size: 100% 100%;
   }
   
-  .home .ellipse {
-    position: relative;
-    width: 159px;
-    height: 143px;
-    top: 132px;
-    left: 124px;
-    background-color: #f9f9f9;
-    border-radius: 79.66px/71.7px;
-  }
-  
-  .home .text-wrapper-14 {
+  .text-wrapper-14 {
     width: 122px;
-    top: 112px;
-    left: 320px;
+    top: 180px;
+    left: 542px;
+    width: 110px;
     position: absolute;
     font-family: "Satoshi-Medium", Helvetica;
-    font-weight: 500;
+    font-weight: 700;
     color: #000000;
     font-size: 18px;
     text-align: center;
@@ -448,13 +335,13 @@
     line-height: normal;
   }
   
-  .home .text-wrapper-15 {
-    top: 790px;
-    left: 1247px;
+  .text-wrapper-15 {
+    top: 848px;
+    left: 1450px;
     position: absolute;
     width: 138px;
     font-family: "Satoshi-Medium", Helvetica;
-    font-weight: 500;
+    font-weight: 700;
     color: #000000;
     font-size: 18px;
     text-align: center;
@@ -462,13 +349,13 @@
     line-height: normal;
   }
   
-  .home .text-wrapper-16 {
+  .text-wrapper-16 {
     width: 111px;
-    top: 833px;
-    left: 307px;
+    top: 891px;
+    left: 519px;
     position: absolute;
     font-family: "Satoshi-Medium", Helvetica;
-    font-weight: 500;
+    font-weight: 700;
     color: #000000;
     font-size: 18px;
     text-align: center;
@@ -476,21 +363,21 @@
     line-height: normal;
   }
   
-  .home .group-2 {
+  .group-2 {
     position: absolute;
     width: 119px;
     height: 125px;
-    top: 0;
-    left: 1539px;
+    top: 48px;
+    left: 1761px;
   }
   
-  .home .text-wrapper-17 {
-    top: 867px;
-    left: 1092px;
+  .text-wrapper-17 {
+    top: 924px;
+    left: 1130px;
     position: absolute;
     width: 138px;
     font-family: "Satoshi-Medium", Helvetica;
-    font-weight: 500;
+    font-weight: 700;
     color: #000000;
     font-size: 18px;
     text-align: center;
@@ -498,57 +385,34 @@
     line-height: normal;
   }
   
-  .home .vector-wrapper {
+  .vector {
     position: absolute;
-    width: 101px;
-    height: 93px;
-    top: 880px;
-    left: 1583px;
-    
-    background-size: cover;
-    background-position: 50% 50%;
+    width: 150px;
+    height: 150px;
+    top: 920px;
+    left: 1600px;
   }
   
-  .home .vector {
+  .group-3 {
     position: absolute;
-    width: 40px;
-    height: 40px;
-    top: 21px;
-    left: 33px;
+    width: 150px;
+    height: 150px;
+    top: 920px;
+    left: 116px;
   }
   
-  .home .group-3 {
+  .vector-2 {
     position: absolute;
-    width: 101px;
-    height: 93px;
-    top: 880px;
-    left: 134px;
+    width: 150px;
+    height: 150px;
+    top: 920px;
+    left: 1750px;
   }
   
-  .home .img-wrapper {
+  .group-4 {
     position: absolute;
-    width: 101px;
-    height: 93px;
-    top: 880px;
-    left: 1691px;
-    
-    background-size: cover;
-    background-position: 50% 50%;
-  }
-  
-  .home .vector-2 {
-    position: absolute;
-    width: 41px;
-    height: 41px;
-    top: 20px;
-    left: 27px;
-  }
-  
-  .home .group-4 {
-    position: absolute;
-    width: 102px;
-    height: 93px;
-    top: 928px;
-    left: 78px;
+    width: 150px;
+    height: 150px;
+    top: 920px;
   }
   
