--- a/projeto-sabespe/src/app/pages/voce-sabia-allianz/voce-sabia-allianz.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-allianz/voce-sabia-allianz.component.html
@@ -1,16 +1,11 @@
-<div class="voc-sabia-polo-mooca">
-    <div class="div">
-      <div class="overlap">
-        <div class="overlap-group">
-          <div class="group">
-            <div class="overlap-group-2">
-              <div class="voc">VOCÊ</div>
-              <div class="sabia">SABIA?</div>
-            </div>
-          </div>
-          <div class="paragrafo-com-scroll">
-            <p class="a-atual-identidade">
-                Casa do Palmeiras, e palco dos maiores shows e eventos que acontecem na cidade de São Paulo, 
+<div class="div">
+  <div class="overlap">
+    <div class="overlap-group">
+      <div class="voc">VOCÊ</div>
+      <div class="sabia">SABIA?</div>
+      <div class="paragrafo-com-scroll">
+        <p class="a-atual-identidade">
+          Casa do Palmeiras, e palco dos maiores shows e eventos que acontecem na cidade de São Paulo, 
                 o Allianz Parque é um gigante que abriga a história e a  tradição do Clube, e faz um elo com a comunidade 
                 local por meio das atrações que oferece, e da sua privilegiada localização.&nbsp;&nbsp;<br /><br />
                 Vamos dar um pulo na 25?”. 
@@ -23,18 +18,19 @@
                 frequentar os restaurantes e utilizar o espaço de coworking.&nbsp;&nbsp;<br /><br />
                 A tecnologia de ponta se integra à tradição, criando uma experiência única para os frequentadores. 
                 O Allianz Parque é referência em conforto, segurança e acessibilidade, elevando o futebol e as outras atividades a outro patamar.
-            </p>
-          </div>
-          <img class="ativo" src="../../../assets/grafismo.png" />
-        </div>
-        <div class="overlap-2">
-          <img class="mask-group" src="../../../assets/jardins/allianz/allianz-1.png" /> <img class="img" src="../../../assets/jardins/allianz/allianz-2.png" />
-        </div>
+        </p>
       </div>
-      <div class="vector-wrapper"><img class="vector" src="img/image.svg" /></div>
-      <img class="group-2" src="img/group-45.png" />
-      <img class="frame" src="img/frame-9.png" />
-      <img class="group-3" src="img/group-42.png" />
-      <div class="img-wrapper"><img class="vector-2" src="img/vector.svg" /></div>
+      <img class="ativo" src="assets/grafismo.png" />
     </div>
+    <div class="overlap-2">
+      <img class="mask-group" src="assets/jardins/allianz/allianz-1.png" /> <img class="img" src="assets/jardins/allianz/allianz-2.png" />
+    </div>
+  </div>
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="frame" src="assets/linha-colorida.png" />
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
+  <div class="img-wrapper"></div>
 </div>
+
