--- a/projeto-sabespe/src/app/pages/voce-sabia-grafite/voce-sabia-grafite.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-grafite/voce-sabia-grafite.component.html
@@ -1,16 +1,11 @@
-<div class="voc-sabia-polo-mooca">
-    <div class="div">
-      <div class="overlap">
-        <div class="overlap-group">
-          <div class="group">
-            <div class="overlap-group-2">
-              <div class="voc">VOCÊ</div>
-              <div class="sabia">SABIA?</div>
-            </div>
-          </div>
-          <div class="paragrafo-com-scroll">
-            <p class="a-atual-identidade">
-                O Movimento Grafite e Hip Hop traz as cores e as vozes que ecoam pelas ruas e vielas de São Mateus contam histórias de luta 
+<div class="div">
+  <div class="overlap">
+    <div class="overlap-group">
+      <div class="voc">VOCÊ</div>
+      <div class="sabia">SABIA?</div>
+      <div class="paragrafo-com-scroll">
+        <p class="a-atual-identidade">
+          O Movimento Grafite e Hip Hop traz as cores e as vozes que ecoam pelas ruas e vielas de São Mateus contam histórias de luta 
                 e superação, e reivindicam à esperança o anseio de dias melhores.  
                 Por meio da arte, artistas dão voz à periferia e transformam o cinza da cidade.&nbsp;&nbsp;<br /><br />
                 Em São Mateus, a selva de pedra se transforma em tela vibrante. Grafites explodem em cores e rimas, contando histórias 
@@ -21,19 +16,19 @@
                 O grafite e o hip hop são um hino à transformação. Uma força que colore a periferia, empodera seus habitantes e 
                 ecoa por toda a cidade. São Mateus é um lar para a criatividade. Um lugar onde a arte urbana floresce, inspirando e 
                 transformando a vida das pessoas.
-
-            </p>
-          </div>
-          <img class="ativo" src="../../../assets/grafismo.png" />
-        </div>
-        <div class="overlap-2">
-          <img class="mask-group" src="../../../assets/sao-mateus/grafite/grafite-1.png" /> <img class="img" src="../../../assets/sao-mateus/grafite/grafite-2.png" />
-        </div>
+        </p>
       </div>
-      <div class="vector-wrapper"><img class="vector" src="img/image.svg" /></div>
-      <img class="group-2" src="img/group-45.png" />
-      <img class="frame" src="img/frame-9.png" />
-      <img class="group-3" src="img/group-42.png" />
-      <div class="img-wrapper"><img class="vector-2" src="img/vector.svg" /></div>
+      <img class="ativo" src="assets/grafismo.png" />
     </div>
+    <div class="overlap-2">
+      <img class="mask-group" src="assets/sao-mateus/grafite/grafite-1.png" /> <img class="img" src="assets/sao-mateus/grafite/grafite-2.png" />
+    </div>
+  </div>
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="frame" src="assets/linha-colorida.png" />
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
+  <div class="img-wrapper"></div>
 </div>
+
