--- a/projeto-sabespe/src/app/pages/voce-sabia-industrial/voce-sabia-industrial.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-industrial/voce-sabia-industrial.component.html
@@ -1,16 +1,11 @@
-<div class="voc-sabia-polo-mooca">
-    <div class="div">
-      <div class="overlap">
-        <div class="overlap-group">
-          <div class="group">
-            <div class="overlap-group-2">
-              <div class="voc">VOCÊ</div>
-              <div class="sabia">SABIA?</div>
-            </div>
-          </div>
-          <div class="paragrafo-com-scroll">
-            <p class="a-atual-identidade">
-                Duas forças imponentes dividem o cenário na baixada santista: a vasta natureza e o Polo Industrial Petroquímico. 
+<div class="div">
+  <div class="overlap">
+    <div class="overlap-group">
+      <div class="voc">VOCÊ</div>
+      <div class="sabia">SABIA?</div>
+      <div class="paragrafo-com-scroll">
+        <p class="a-atual-identidade">
+          Duas forças imponentes dividem o cenário na baixada santista: a vasta natureza e o Polo Industrial Petroquímico. 
                 O equilíbrio da coexistência é conquistado por meio de ações sustentáveis que visam o bem do planeta e o  
                 desenvolvimento da sociedade.&nbsp;&nbsp;<br /><br />
                 Onde a vastidão verde da baixada santista se encontra com a imponência das chaminés, surge o Polo Petroquímico do ABC. 
@@ -19,18 +14,19 @@
                 de profissionais qualificados, transforma o petróleo em produtos que contribuem para o desenvolvimento da sociedade.&nbsp;&nbsp;<br /><br />
                 É um palco para o desenvolvimento sustentável: a busca incessante por soluções inovadoras e sustentáveis guia o polo. 
                 A indústria se reinventa, buscando minimizar o impacto ambiental e maximizar a eficiência energética, em sintonia com a natureza.
-            </p>
-          </div>
-          <img class="ativo" src="../../../assets/grafismo.png" />
-        </div>
-        <div class="overlap-2">
-          <img class="mask-group" src="../../../assets/tamanduatei/industrial/industrial-1.png" /> <img class="img" src="../../../assets/tamanduatei/industrial/industrial-2.png" />
-        </div>
+        </p>
       </div>
-      <div class="vector-wrapper"><img class="vector" src="img/image.svg" /></div>
-      <img class="group-2" src="img/group-45.png" />
-      <img class="frame" src="img/frame-9.png" />
-      <img class="group-3" src="img/group-42.png" />
-      <div class="img-wrapper"><img class="vector-2" src="img/vector.svg" /></div>
+      <img class="ativo" src="assets/grafismo.png" />
     </div>
+    <div class="overlap-2">
+      <img class="mask-group" src="assets/tamanduatei/industrial/industrial-1.png" /> <img class="img" src="assets/tamanduatei/industrial/industrial-2.png" />
+    </div>
+  </div>
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="frame" src="assets/linha-colorida.png" />
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
+  <div class="img-wrapper"></div>
 </div>
+
