--- a/projeto-sabespe/src/app/pages/voce-sabia-mercadao/voce-sabia-mercadao.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-mercadao/voce-sabia-mercadao.component.html
@@ -1,16 +1,11 @@
-<div class="voc-sabia-polo-mooca">
-    <div class="div">
-      <div class="overlap">
-        <div class="overlap-group">
-          <div class="group">
-            <div class="overlap-group-2">
-              <div class="voc">VOCÊ</div>
-              <div class="sabia">SABIA?</div>
-            </div>
-          </div>
-          <div class="paragrafo-com-scroll">
-            <p class="a-atual-identidade">
-                O Mercadão, como é conhecido, é local de encontro de todos os povos e diferentes culinárias que moldam a gastronomia 
+<div class="div">
+  <div class="overlap">
+    <div class="overlap-group">
+      <div class="voc">VOCÊ</div>
+      <div class="sabia">SABIA?</div>
+      <div class="paragrafo-com-scroll">
+        <p class="a-atual-identidade">
+          O Mercadão, como é conhecido, é local de encontro de todos os povos e diferentes culinárias que moldam a gastronomia 
                 paulistana. É impossível passear por seus corredores e não ser atraído pelo aroma das especiarias, produtos e iguarias, 
                 ou ser tentado a provar o famoso sanduíche de mortadela.&nbsp;&nbsp;<br /><br />
                 Imponente, o Mercadão, como é conhecido entre os paulistanos, ostenta seus 90 anos de vida com orgulho. 
@@ -23,18 +18,19 @@
                 O Mercadão é um ponto de encontro para pessoas de todas as origens e histórias. 
                 Famílias se reúnem em torno de mesas fartas, amigos compartilham risadas e conversas animadas, e turistas se encantam com a cultura local. 
                 Um símbolo da alma paulistana.
-            </p>
-          </div>
-          <img class="ativo" src="../../../assets/grafismo.png" />
-        </div>
-        <div class="overlap-2">
-          <img class="mask-group" src="../../../assets/ipiranga/mercadao/mercadao-1.png" /> <img class="img" src="../../../assets/ipiranga/mercadao/mercadao-2.png" />
-        </div>
+        </p>
       </div>
-      <div class="vector-wrapper"><img class="vector" src="img/image.svg" /></div>
-      <img class="group-2" src="img/group-45.png" />
-      <img class="frame" src="img/frame-9.png" />
-      <img class="group-3" src="img/group-42.png" />
-      <div class="img-wrapper"><img class="vector-2" src="img/vector.svg" /></div>
+      <img class="ativo" src="assets/grafismo.png" />
     </div>
+    <div class="overlap-2">
+      <img class="mask-group" src="assets/ipiranga/mercadao/mercadao-1.png" /> <img class="img" src="assets/ipiranga/mercadao/mercadao-2.png" />
+    </div>
+  </div>
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="frame" src="assets/linha-colorida.png" />
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
+  <div class="img-wrapper"></div>
 </div>
+
