--- a/projeto-sabespe/src/app/pages/voce-sabia-museu/voce-sabia-museu.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-museu/voce-sabia-museu.component.html
@@ -1,16 +1,11 @@
-<div class="voc-sabia-polo-mooca">
-    <div class="div">
-      <div class="overlap">
-        <div class="overlap-group">
-          <div class="group">
-            <div class="overlap-group-2">
-              <div class="voc">VOCÊ</div>
-              <div class="sabia">SABIA?</div>
-            </div>
-          </div>
-          <div class="paragrafo-com-scroll">
-            <p class="a-atual-identidade">
-                O Museu do Ipiranga é um alicerce para a preservação da memória histórica  brasileira. 
+<div class="div">
+  <div class="overlap">
+    <div class="overlap-group">
+      <div class="voc">VOCÊ</div>
+      <div class="sabia">SABIA?</div>
+      <div class="paragrafo-com-scroll">
+        <p class="a-atual-identidade">
+          O Museu do Ipiranga é um alicerce para a preservação da memória histórica  brasileira. 
                 Em meio à metrópole que se transforma diariamente, ele preserva registros e artefatos, e revela segredos que proporcionam 
                 uma verdadeira viagem no tempo ao encontro das nossas origens e da história do nosso país.&nbsp;&nbsp;<br /><br />
                 Em meio à vibrante metrópole de São Paulo, ergue-se o Museu do Ipiranga, um monumento imponente que guarda a memória 
@@ -21,19 +16,18 @@
                 séculos.
                 É um retrato do Brasil, um país de contrastes e de belezas, de alegrias e de desafios. 
                 É um lugar onde podemos celebrar o que somos e buscar inspiração para construir um futuro melhor.
-
-            </p>
-          </div>
-          <img class="ativo" src="../../../assets/grafismo.png" />
-        </div>
-        <div class="overlap-2">
-          <img class="mask-group" src="../../../assets/ipiranga/museu/museu-1.png" /> <img class="img" src="../../../assets/ipiranga/museu/museu-2.png" />
-        </div>
+        </p>
       </div>
-      <div class="vector-wrapper"><img class="vector" src="img/image.svg" /></div>
-      <img class="group-2" src="img/group-45.png" />
-      <img class="frame" src="img/frame-9.png" />
-      <img class="group-3" src="img/group-42.png" />
-      <div class="img-wrapper"><img class="vector-2" src="img/vector.svg" /></div>
+      <img class="ativo" src="assets/grafismo.png" />
     </div>
+    <div class="overlap-2">
+      <img class="mask-group" src="assets/ipiranga/museu/museu-1.png" /> <img class="img" src="assets/ipiranga/museu/museu-2.png" />
+    </div>
+  </div>
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="frame" src="assets/linha-colorida.png" />
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
+  <div class="img-wrapper"></div>
 </div>
