--- a/projeto-sabespe/src/app/pages/voce-sabia-origem/voce-sabia-origem.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-origem/voce-sabia-origem.component.html
@@ -1,16 +1,11 @@
-<div class="voc-sabia-polo-mooca">
-    <div class="div">
-      <div class="overlap">
-        <div class="overlap-group">
-          <div class="group">
-            <div class="overlap-group-2">
-              <div class="voc">VOCÊ</div>
-              <div class="sabia">SABIA?</div>
-            </div>
-          </div>
-          <div class="paragrafo-com-scroll">
-            <p class="a-atual-identidade">
-                A diversidade cultural que se reflete na culinária, religião e tradições do bairro de São Mateus é fruto de sua história 
+<div class="div">
+  <div class="overlap">
+    <div class="overlap-group">
+      <div class="voc">VOCÊ</div>
+      <div class="sabia">SABIA?</div>
+      <div class="paragrafo-com-scroll">
+        <p class="a-atual-identidade">
+          A diversidade cultural que se reflete na culinária, religião e tradições do bairro de São Mateus é fruto de sua história 
                 tão rica e peculiar. Quando tudo ainda era mata virgem, São Mateus foi habitada por povos indígenas, e com os avanços 
                 da urbanização chegaram imigrantes italianos, espanhóis, portugueses, japoneses e árabes, 
                 e também migrantes nordestinos que contribuíram para a formação do bairro.&nbsp;&nbsp;<br /><br />
@@ -42,18 +37,18 @@
                 Bairro acolhedor e vibrante, com forte identidade e potencial de crescimento.<br />
                 Comunidade engajada na busca por um futuro melhor para todos.<br />
                 História rica e dinâmica, marcada pela luta, superação e esperança. 
-            </p>
-          </div>
-          <img class="ativo" src="../../../assets/grafismo.png" />
-        </div>
-        <div class="overlap-2">
-          <img class="mask-group" src="../../../assets/sao-mateus/origem/origem-1.png" /> <img class="img" src="../../../assets/sao-mateus/origem/origem-2.png" />
-        </div>
+        </p>
       </div>
-      <div class="vector-wrapper"><img class="vector" src="img/image.svg" /></div>
-      <img class="group-2" src="img/group-45.png" />
-      <img class="frame" src="img/frame-9.png" />
-      <img class="group-3" src="img/group-42.png" />
-      <div class="img-wrapper"><img class="vector-2" src="img/vector.svg" /></div>
+      <img class="ativo" src="assets/grafismo.png" />
     </div>
+    <div class="overlap-2">
+      <img class="mask-group" src="assets/sao-mateus/origem/origem-1.png" /> <img class="img" src="assets/sao-mateus/origem/origem-2.png" />
+    </div>
+  </div>
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="frame" src="assets/linha-colorida.png" />
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
+  <div class="img-wrapper"></div>
 </div>
