--- a/projeto-sabespe/src/app/pages/voce-sabia-parquinho/voce-sabia-parquinho.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-parquinho/voce-sabia-parquinho.component.html
@@ -1,16 +1,11 @@
-<div class="voc-sabia-polo-mooca">
-    <div class="div">
-      <div class="overlap">
-        <div class="overlap-group">
-          <div class="group">
-            <div class="overlap-group-2">
-              <div class="voc">VOCÊ</div>
-              <div class="sabia">SABIA?</div>
-            </div>
-          </div>
-          <div class="paragrafo-com-scroll">
-            <p class="a-atual-identidade">
-                A imensa e urbana São Mateus encontra refúgio para recarregar as energias no Parque Nebulosas que abriga árvores centenárias, 
+<div class="div">
+  <div class="overlap">
+    <div class="overlap-group">
+      <div class="voc">VOCÊ</div>
+      <div class="sabia">SABIA?</div>
+      <div class="paragrafo-com-scroll">
+        <p class="a-atual-identidade">
+          A imensa e urbana São Mateus encontra refúgio para recarregar as energias no Parque Nebulosas que abriga árvores centenárias, 
                 e oferece lindas paisagens como cenário para encontros de lazer, prática de esportes e manifestações artísticas.&nbsp;&nbsp;<br /><br />
                 Vamos dar um pulo na 25?”. 
                 Em meio à vastidão urbana de São Mateus, surge um oásis verde, o Parque Nebulosas. 
@@ -21,18 +16,18 @@
                 Amantes do esporte se exercitam nas pistas de corrida e ciclismo. Artistas de rua expressam seus talentos, criando uma atmosfera vibrante.
                 Mais do que um parque, o Nebulosas é um símbolo da esperança e da transformação. 
                 Um legado para as gerações futuras, um espaço que deve ser preservado e valorizado.
-            </p>
-          </div>
-          <img class="ativo" src="../../../assets/grafismo.png" />
-        </div>
-        <div class="overlap-2">
-          <img class="mask-group" src="../../../assets/sao-mateus/parquinho/parquinho-1.png" /> <img class="img" src="../../../assets/sao-mateus/parquinho/parquinho-2.png" />
-        </div>
+        </p>
       </div>
-      <div class="vector-wrapper"><img class="vector" src="img/image.svg" /></div>
-      <img class="group-2" src="img/group-45.png" />
-      <img class="frame" src="img/frame-9.png" />
-      <img class="group-3" src="img/group-42.png" />
-      <div class="img-wrapper"><img class="vector-2" src="img/vector.svg" /></div>
+      <img class="ativo" src="assets/grafismo.png" />
     </div>
+    <div class="overlap-2">
+      <img class="mask-group" src="assets/sao-mateus/parquinho/parquinho-1.png" /> <img class="img" src="assets/sao-mateus/parquinho/parquinho-2.png" />
+    </div>
+  </div>
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="frame" src="assets/linha-colorida.png" />
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
+  <div class="img-wrapper"></div>
 </div>
