--- a/projeto-sabespe/src/app/pages/voce-sabia-paulista/voce-sabia-paulista.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-paulista/voce-sabia-paulista.component.html
@@ -1,16 +1,11 @@
-<div class="voc-sabia-polo-mooca">
-    <div class="div">
-      <div class="overlap">
-        <div class="overlap-group">
-          <div class="group">
-            <div class="overlap-group-2">
-              <div class="voc">VOCÊ</div>
-              <div class="sabia">SABIA?</div>
-            </div>
-          </div>
-          <div class="paragrafo-com-scroll">
-            <p class="a-atual-identidade">
-                A Avenida Paulista é a artéria pulsante da megalópole, e sua 
+<div class="div">
+  <div class="overlap">
+    <div class="overlap-group">
+      <div class="voc">VOCÊ</div>
+      <div class="sabia">SABIA?</div>
+      <div class="paragrafo-com-scroll">
+        <p class="a-atual-identidade">
+          A Avenida Paulista é a artéria pulsante da megalópole, e sua 
                 pluralidade e ritmo frenético conseguem refletir com exatidão o caldeirão cultural, 
                 comercial e histórico que é a cidade de São Paulo. &nbsp;&nbsp;<br /><br />
                 Um palco vibrante onde a sinfonia urbana se desenrola. Arranha-céus imponentes erguem-se como maestros, 
@@ -20,18 +15,18 @@
                 Testemunhas do tempo, guardam memórias da São Paulo que se transforma, mas que preserva suas raízes.&nbsp;&nbsp;<br /><br />
                 A Avenida Paulista é a alma da cidade, um microcosmo pulsante que traduz a essência de São Paulo. 
                 É o palco de sonhos e conquistas, de alegrias e frustrações, de encontros e despedidas.
-            </p>
-          </div>
-          <img class="ativo" src="../../../assets/grafismo.png" />
-        </div>
-        <div class="overlap-2">
-          <img class="mask-group" src="../../../assets/jardins/paulista/paulista-1.png" /> <img class="img" src="../../../assets/jardins/paulista/paulista-2.png" />
-        </div>
+        </p>
       </div>
-      <div class="vector-wrapper"><img class="vector" src="img/image.svg" /></div>
-      <img class="group-2" src="img/group-45.png" />
-      <img class="frame" src="img/frame-9.png" />
-      <img class="group-3" src="img/group-42.png" />
-      <div class="img-wrapper"><img class="vector-2" src="img/vector.svg" /></div>
+      <img class="ativo" src="assets/grafismo.png" />
     </div>
+    <div class="overlap-2">
+      <img class="mask-group" src="assets/jardins/paulista/paulista-1.png" /> <img class="img" src="assets/jardins/paulista/paulista-2.png" />
+    </div>
+  </div>
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="frame" src="assets/linha-colorida.png" />
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
+  <div class="img-wrapper"></div>
 </div>
