--- a/projeto-sabespe/src/app/pages/voce-sabia-vila/voce-sabia-vila.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-vila/voce-sabia-vila.component.html
@@ -1,16 +1,11 @@
-<div class="voc-sabia-polo-mooca">
-    <div class="div">
-      <div class="overlap">
-        <div class="overlap-group">
-          <div class="group">
-            <div class="overlap-group-2">
-              <div class="voc">VOCÊ</div>
-              <div class="sabia">SABIA?</div>
-            </div>
-          </div>
-          <div class="paragrafo-com-scroll">
-            <p class="a-atual-identidade">
-                Uma viagem através dos trilhos ferroviários e a sensação nostálgica de ter sido transportado para o passado. 
+<div class="div">
+  <div class="overlap">
+    <div class="overlap-group">
+      <div class="voc">VOCÊ</div>
+      <div class="sabia">SABIA?</div>
+      <div class="paragrafo-com-scroll">
+        <p class="a-atual-identidade">
+          Uma viagem através dos trilhos ferroviários e a sensação nostálgica de ter sido transportado para o passado. 
                 A Vila de Paranapiacaba abriga história, arquitetura inglesa e turismo ambiental com paisagens de tirar o fôlego em meio a Serra do Mar.&nbsp;&nbsp;<br /><br />
                 Em meio ao verde exuberante da Serra do Mar, surge Paranapiacaba, uma vila histórica envolta em mistérios e encantos. 
                 Uma viagem no tempo que nos transporta para um passado de glória e nostalgia.&nbsp;&nbsp;<br /><br />
@@ -21,18 +16,18 @@
                 A vila é um símbolo da preservação ambiental, cercada por uma rica mata atlântica. 
                 Trilhas convidam os visitantes a explorar a beleza natural da região, com cachoeiras cristalinas e mirantes com vistas deslumbrantes. 
                 É um hino à natureza, um canto de amor à Serra do Mar e a todos os seus seres.
-            </p>
-          </div>
-          <img class="ativo" src="../../../assets/grafismo.png" />
-        </div>
-        <div class="overlap-2">
-          <img class="mask-group" src="../../../assets/tamanduatei/vila/vila-1.png" /> <img class="img" src="../../../assets/tamanduatei/vila/vila-2.png" />
-        </div>
+        </p>
       </div>
-      <div class="vector-wrapper"><img class="vector" src="img/image.svg" /></div>
-      <img class="group-2" src="img/group-45.png" />
-      <img class="frame" src="img/frame-9.png" />
-      <img class="group-3" src="img/group-42.png" />
-      <div class="img-wrapper"><img class="vector-2" src="img/vector.svg" /></div>
+      <img class="ativo" src="assets/grafismo.png" />
     </div>
+    <div class="overlap-2">
+      <img class="mask-group" src="assets/tamanduatei/vila/vila-1.png" /> <img class="img" src="assets/tamanduatei/vila/vila-2.png" />
+    </div>
+  </div>
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="frame" src="assets/linha-colorida.png" />
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
+  <div class="img-wrapper"></div>
 </div>
