--- a/projeto-sabespe/src/app/pages/voce-sabia/voce-sabia.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia/voce-sabia.component.html
@@ -1,30 +1,25 @@
-<div class="voc-sabia-polo-mooca">
-    <div class="div">
-      <div class="overlap">
-        <div class="overlap-group">
-          <div class="group">
-            <div class="overlap-group-2">
-              <div class="voc">VOCÊ</div>
-              <div class="sabia">SABIA?</div>
-            </div>
-          </div>
-          <div class="paragrafo-com-scroll">
-            <p class="a-atual-identidade">
-              A OC foi berço do saneamento em São Paulo se iniciando com a criação em 1877 da “Companhia Cantareira de Água e Esgoto”, 
-              que mais tarde integraria a Sabesp, 
-              e a construção do reservatório da Consolação em 1878.
-            </p>
-          </div>
-          <img class="ativo" src="../../../assets/grafismo.png" />
-        </div>
-        <div class="overlap-2">
-          <img class="mask-group" src="../../../assets/sabia-oc.png" /> <img class="img" src="../../../assets/sabia-oc-2.png" />
-        </div>
+<div class="div">
+  <div class="overlap">
+    <div class="overlap-group">
+      <div class="voc">VOCÊ</div>
+      <div class="sabia">SABIA?</div>
+      <div class="paragrafo-com-scroll">
+        <p class="a-atual-identidade">
+          A OC foi berço do saneamento em São Paulo se iniciando com a criação em 1877 da “Companhia Cantareira de Água e Esgoto”, 
+          que mais tarde integraria a Sabesp, 
+          e a construção do reservatório da Consolação em 1878.
+        </p>
       </div>
-      <div class="vector-wrapper"><img class="vector" src="img/image.svg" /></div>
-      <img class="group-2" src="img/group-45.png" />
-      <img class="frame" src="img/frame-9.png" />
-      <img class="group-3" src="img/group-42.png" />
-      <div class="img-wrapper"><img class="vector-2" src="img/vector.svg" /></div>
+      <img class="ativo" src="assets/grafismo.png" />
     </div>
+    <div class="overlap-2">
+      <img class="mask-group" src="assets/sabia-oc.png" /> <img class="img" src="assets/sabia-oc-2.png" />
+    </div>
+  </div>
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="frame" src="assets/linha-colorida.png" />
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
+  <div class="img-wrapper"></div>
 </div>
